Revision history for {{$dist->name}}

{{$NEXT}}
 [API CHANGE]

 [BUG FIXES]

 [DOCUMENTATION]

 [ENHANCEMENTS]

 [MAJOR]

1.0.2 2015-04-06T13:33:21-04:00 America/New_York
 [DOCUMENTATION]
 - Better documentation

1.0.1 2015-04-04T13:52:47-04:00 America/New_York
 [BUG FIXES]
 - Added authorpreq Pod::Elemental::Transformer::List
 - Fixed issue #1, internationalization of error

1.0.0 2015-04-01T07:58:18-07:00 America/Los_Angeles
 [MAJOR]
 - [MAJOR] - initial release
